# bsky-art-bot

./: .gitignore  Justfile  README.md  deploy.sh
bsky-poster/: index.ts  package-lock.json  package.json  tsconfig.json
bsky-poster-rs/: Cargo.toml
bsky-poster-rs/src/: main.rs
datafetcher/: .rustc_info.json  Cargo.toml
datafetcher/src/: main.rs  s3.rs  scryfall.rs
infra/: README.md  package-lock.json
infra/lib/: infra-stack.ts
lambdas/: Cargo.toml
lambdas/bsky-poster-rs/: Cargo.toml
lambdas/bsky-poster-rs/src/: bsky.rs  main.rs  selector.rs
lambdas/datafetcher/: Cargo.toml
lambdas/datafetcher/src/: main.rs
scryfall-datafetcher/: go.mod  go.sum  main.go
scryfall-datafetcher/aws/: s3.go
scryfall-datafetcher/scryfall/: cards.go
