[package]
name = "datafetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
aws-config = { version = "1.5.11", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.66.0"
aws-types = "1.3.3"
lambda_runtime = "0.13.0"
openssl = { version = "0.10.68", features = ["vendored"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.42.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
