[package]
name = "bsky-poster-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
atrium-api = "0.25.5"
aws-config = "1.8.5"
aws-sdk-dynamodb = "1.90.0"
aws-sdk-s3 = "1.103.0"
aws-sdk-secretsmanager = "1.86.0"
aws-types = "1.3.8"
bsky-sdk = "0.1.21"
lambda_runtime = "0.14.4"
openssl = { version = "0.10.68", features = ["vendored"] }
rand = "0.9.2"
reqwest = "0.12.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
